# src-trusted-firmware-m

./: .gitattributes  CMakeLists.txt  README.md  toolchain_ARMCLANG.cmake  toolchain_GNUARM.cmake  toolchain_IARARM.cmake
cmake/: FindPythonModules.cmake  install.cmake
config/: config_default.cmake
docs/: CMakeLists.txt  conf.py.in
docs/contributing/: maintainers.rst
docs/design_documents/: tfm_secure_partition_interrupt_handling.rst
docs/getting_started/: tfm_sw_requirement.rst
docs/reference/security_advisories/: cypress_mxcrypto_ecc_vulnerability.rst
docs/reference/services/: tfm_its_integration_guide.rst  tfm_ps_integration_guide.rst  tfm_psa_proxy_integration_guide.rst  tfm_secure_partition_addition.rst
interface/: CMakeLists.txt
interface/include/: tfm_ps_defs.h
interface/src/: tfm_crypto_func_api.c
interface/src/psa/: psa_client.c  psa_service.c
lib/ext/: CMakeLists.txt
lib/ext/mbedcrypto/: 0001-BUILD-Update-IAR-support-in-CMakeLists.txt.patch  0002-Enable-crypto-code-sharing-between-independent-binar.patch  CMakeLists.txt
lib/ext/psa_arch_tests/: 0001-Add-ARCH_TEST_RSA_2048_GEN_KEY.patch  CMakeLists.txt
lib/ext/qcbor/src/: qcbor_decode.c  qcbor_encode.c
lib/ext/qcbor/test/: float_tests.c
lib/ext/qcbor/util/: qcbor_util.c  qcbor_util.h
lib/ext/t_cose/crypto_adapters/: t_cose_psa_crypto.c
lib/ext/t_cose/src/: t_cose_sign1_sign.c  t_cose_sign1_verify.c
lib/ext/tf-m-tests/: CMakeLists.txt  allow_build_with_test_s_on_test_ns_off.patch  increase_ps_tests_stack_size.patch
lib/static_checks/: static_checks.cmake
platform/: CMakeLists.txt
platform/ext/accelerator/: CMakeLists.txt
platform/ext/accelerator/psoc6_crypto/: CMakeLists.txt  config.cmake  crypto_hw.c  hw_poll.c  mbedtls_accelerator_config.h
platform/ext/cmsis/: cmsis_gcc.h  mpu_armv7.h
platform/ext/common/: boot_hal.c  tfm_crypto_vendor_key_hal.c  tfm_hal_its.c  tfm_hal_ps.c  tfm_hal_sp_logdev_periph.c  tfm_platform.c
platform/ext/common/armclang/: tfm_common_s.sct
platform/ext/common/gcc/: tfm_common_s.ld
platform/ext/common/iar/: tfm_common_s.icf
platform/ext/common/template/: tfm_platform_ps.c
platform/ext/driver/: Driver_Flash.h  Driver_USART.h
platform/include/: tfm_crypto_vendor_key_hal_api.h  tfm_hal_its.h  tfm_hal_ps.h  tfm_plat_crypto_keys.h  tfm_plat_ns.h  tfm_plat_nv_counters.h  tfm_platform_ps.h  tfm_spm_hal.h
secure_fw/: CMakeLists.txt
secure_fw/partitions/audit_logging/: audit_core.c
secure_fw/partitions/crypto/: CMakeLists.txt  crypto_aead.c  crypto_asymmetric.c  crypto_cipher.c  crypto_hash.c  crypto_init.c  crypto_key.c  crypto_key_derivation.c  crypto_mac.c  crypto_vendor_key.c  tfm_crypto_api.h  tfm_crypto_secure_api.c  tfm_crypto_vendor_key_api.h
secure_fw/partitions/initial_attestation/: attest_asymmetric_key.c  attest_core.c  tfm_attest_req_mngr.c  tfm_initial_attestation.yaml
secure_fw/partitions/internal_trusted_storage/: CMakeLists.txt  tfm_internal_trusted_storage.c  tfm_internal_trusted_storage.yaml  tfm_its_req_mngr.c
secure_fw/partitions/internal_trusted_storage/flash/: its_flash.c
secure_fw/partitions/lib/sprt/: service_api.c
secure_fw/partitions/platform/: platform_sp.c  tfm_platform.yaml
secure_fw/partitions/protected_storage/: ps_encrypted_object.c  ps_object_defs.h  ps_object_system.c  ps_object_table.c  tfm_protected_storage.c  tfm_protected_storage.h  tfm_protected_storage.yaml  tfm_ps_req_mngr.c
secure_fw/partitions/protected_storage/crypto/: ps_crypto_interface.c  ps_crypto_interface.h
secure_fw/partitions/psa_proxy/: psa_proxy.c
secure_fw/partitions/tfm_ffm11_partition/: tfm_ffm11_partition.c
secure_fw/spm/cmsis_psa/: main.c  spm_ipc.c  spm_ipc.h  tfm_core_svcalls_ipc.c  tfm_multi_core.c  tfm_multi_core.h  tfm_multi_core_mem_check.c  tfm_psa_api_veneers.c  tfm_thread.h
secure_fw/spm/cmsis_psa/arch/: tfm_arch.c
secure_fw/spm/ffm/: psa_client_service_apis.c  spm_log.c  spm_psa_client_call.c  tfm_boot_data.c
secure_fw/spm/include/: exception_info.h  spm_partition_defs.h  tfm_arch_v8m.h  tfm_version.h  utilities.h
tools/: CMakeLists.txt  patch.cmake  requirements.txt  tfm_manifest_list.yaml
tools/documentation/: tfm_cmake_defaults.py
